--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,6 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "tw.com.louis383.coffeefinder"
-        minSdkVersion 19
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -14,6 +13,8 @@ android {
         jackOptions {
             enabled true
         }
+
+        buildConfigField 'String', 'HOST', APIHost
     }
 
     compileOptions {
@@ -32,6 +33,10 @@ android {
 
     buildTypes {
         debug {
+            defaultConfig {
+                minSdkVersion 21
+            }
+
             debuggable true
             applicationIdSuffix ".debug"
             versionNameSuffix "-debug"
@@ -39,6 +44,10 @@ android {
             manifestPlaceholders = [ googleMapKeys: googleMapKey_debug ]
         }
         release {
+            defaultConfig {
+                minSdkVersion 19
+            }
+
             signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -48,14 +57,27 @@ android {
     }
 }
 
+ext {
+    retrofit_version = '2.1.0'
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "com.android.support:appcompat-v7:${support_version}"
     compile "com.android.support:design:${support_version}"
+    compile "com.google.android.gms:play-services-maps:${gms_version}"
 
-    compile 'com.google.android.gms:play-services-maps:10.0.1'
+    // HTTP Client
+    compile "com.squareup.retrofit2:retrofit:${retrofit_version}"
+    compile "com.squareup.retrofit2:converter-gson:${retrofit_version}"
+    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
 
-    compile 'com.android.volley:volley:1.0.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
+
+    compile 'io.reactivex.rxjava2:rxjava:2.0.4'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
+    compile 'com.google.code.gson:gson:2.3.1'
 
     // for unit test
     testCompile 'junit:junit:4.12'
