--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "com.android.support:appcompat-v7:${support_version}"
     compile "com.android.support:design:${support_version}"
+    compile "com.google.android.gms:play-services-location:${gms_version}"
     compile "com.google.android.gms:play-services-maps:${gms_version}"
 
     // HTTP Client
