--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "com.android.support:appcompat-v7:${support_version}"
     compile "com.android.support:design:${support_version}"
+    compile "com.android.support:customtabs:${support_version}"
 
     compile "com.google.android.gms:play-services-location:${gms_version}"
     compile "com.google.android.gms:play-services-maps:${gms_version}"
