Coffee shop detail information dialog.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         jackOptions {
             enabled true
         }
+        vectorDrawables.useSupportLibrary = true
 
         buildConfigField 'String', 'HOST', APIHost
     }
