Coffee Shop Detail Information Dialog.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,10 @@ android {
             manifestPlaceholders = [ googleMapKeys: googleMapKey_release ]
         }
     }
+
+    dataBinding {
+        enabled true
+    }
 }
 
 ext {
