--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,6 +101,10 @@ dependencies {
 
     compile 'com.google.code.gson:gson:2.3.1'
 
+    // Dependency Injection
+    compile 'com.google.dagger:dagger:2.9'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
+
     // for unit test
     testCompile 'junit:junit:4.12'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
