--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <application
             android:allowBackup="true"
-            android:name=".CoffeeFinderApplication"
+            android:name=".CoffeeTripApplication"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:supportsRtl="true"
