--- a/gradle/build-script.gradle
+++ b/gradle/build-script.gradle
@@ -1,6 +1,6 @@
 ext.getVersionCodeTimeStamps = { ->
     def date = new Date()
-    def formattedDate = date.format('yyMMddHHmm')
+    def formattedDate = '19' + date.format('yyMMddHH')
     def result = formattedDate.toInteger()
     return result
 }
