--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.41'
+    ext.kotlin_version = '1.2.51'
     repositories {
         jcenter()
         google()
@@ -14,8 +14,11 @@ buildscript {
 
 ext {
     app_version = '1.2.0'
-
-
+    
+    // settings
+    compile_sdk_version = 27
+    target_sdk_version = 27
+    min_sdk_version = 21
     support_version = '27.0.2'
     gms_version = '15.0.1'
 }
