--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
 apply from: "${rootDir}/gradle/build-script.gradle"
 
 android {
@@ -80,7 +79,7 @@ dependencies {
 
     // Dependency Injection
     implementation 'com.google.dagger:dagger:2.9'
-    kapt 'com.google.dagger:dagger-compiler:2.9'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
 
     // for unit test
     testImplementation 'junit:junit:4.12'
