rewrite MapsPresenter from Java to Kotlin
  - Add shadow effect above the list and detail view.
  - According to above, a new shadow drawable has been added.
  - In order to contain the shadow, add new fragment_detail layout
    to set shadow above top of ScrollView

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ android {
         release {
             signingConfig signingConfigs.release
             minifyEnabled true
-            shrinkResources false
+            shrinkResources true
             zipAlignEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
