--- a/anchor-bottom-sheet-behavior/build.gradle
+++ b/anchor-bottom-sheet-behavior/build.gradle
@@ -15,5 +15,6 @@ android {
 }
 
 dependencies {
-    implementation "com.android.support:design:$support_version"
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.0.0'
 }
