--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,7 @@ dependencies {
 
     implementation 'io.reactivex.rxjava2:rxjava:2.0.8'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
 
     implementation 'com.google.code.gson:gson:2.3.1'
 
