--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ ext {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(":anchor-bottom-sheet-behavior")
+    implementation name:'maps-sdk-3.0.0-beta', ext:'aar'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.0'
@@ -80,7 +81,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.0.0'
 
     implementation "com.google.android.gms:play-services-location:${gms_version}"
-    implementation "com.google.android.gms:play-services-maps:${gms_version}"
+    implementation 'com.google.android.gms:play-services-gcm:16.1.0'
 
     // HTTP Client
     implementation "com.squareup.retrofit2:retrofit:${retrofit_version}"
