--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+        flatDir {
+            dirs 'libs'
+        }
     }
 }
 
