--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,15 +73,13 @@ ext {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(":anchor-bottom-sheet-behavior")
-    implementation name:'maps-sdk-3.0.0-beta', ext:'aar'
+    implementation 'com.google.android.libraries.maps:maps:3.1.0-beta'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.core:core-ktx:1.0.0'
-
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'androidx.core:core-ktx:1.3.1'
     implementation "com.google.android.gms:play-services-location:${gms_version}"
-    implementation 'com.google.android.gms:play-services-gcm:16.1.0'
 
     // HTTP Client
     implementation "com.squareup.retrofit2:retrofit:${retrofit_version}"
