--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
     signingConfigs {
         release {
             storeFile file(keystorePath)
@@ -69,6 +73,7 @@ androidExtensions {
 
 ext {
     retrofit_version = '2.8.1'
+    coroutines_version = '1.3.9'
 }
 
 dependencies {
@@ -76,23 +81,19 @@ dependencies {
     implementation project(":anchor-bottom-sheet-behavior")
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.10'
     implementation 'com.google.android.libraries.maps:maps:3.1.0-beta'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${coroutines_version}"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${coroutines_version}"
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.core:core-ktx:1.3.1'
+    implementation "androidx.fragment:fragment-ktx:1.2.5"
     implementation "com.google.android.gms:play-services-location:${gms_version}"
 
     // HTTP Client
     implementation "com.squareup.retrofit2:retrofit:${retrofit_version}"
     implementation "com.squareup.retrofit2:converter-gson:${retrofit_version}"
-    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-
     implementation 'com.squareup.okhttp3:logging-interceptor:3.5.0'
-
-    implementation 'io.reactivex.rxjava2:rxjava:2.0.8'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
-
     implementation 'com.google.code.gson:gson:2.8.5'
 
     // Dependency Injection
