Remove legacy Java entity and domain object.
  - Migrate to Kotlin's data class

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlinx-serialization'
 apply plugin: 'com.akaita.android.easylauncher'
 apply from: "${rootDir}/gradle/build-script.gradle"
 
@@ -83,6 +84,7 @@ dependencies {
     implementation 'com.google.android.libraries.maps:maps:3.1.0-beta'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${coroutines_version}"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${coroutines_version}"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-core:1.0.0-RC"
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
@@ -92,9 +94,8 @@ dependencies {
 
     // HTTP Client
     implementation "com.squareup.retrofit2:retrofit:${retrofit_version}"
-    implementation "com.squareup.retrofit2:converter-gson:${retrofit_version}"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.7.0"
     implementation 'com.squareup.okhttp3:logging-interceptor:3.5.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
 
     // Dependency Injection
     implementation 'com.google.dagger:dagger:2.9'
