--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id "com.starter.easylauncher" version "4.0.0"
+    id "io.gitlab.arturbosch.detekt" version "1.17.1"
+    id "org.jlleitschuh.gradle.ktlint" version "10.1.0"
 }
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
@@ -79,6 +81,24 @@ easylauncher {
     }
 }
 
+detekt {
+    buildUponDefaultConfig = true // preconfigure defaults
+    allRules = false // activate all available (even unstable) rules.
+    config = files("$projectDir/config/detekt.yml") // point to your custom config defining rules to run, overwriting default behavior
+    baseline = file("$projectDir/config/baseline.xml") // a way of suppressing issues before introducing detekt
+
+    reports {
+        html.enabled = true // observe findings in your browser with structure and code snippets
+        xml.enabled = true // checkstyle like format mainly for integrations like Jenkins
+        txt.enabled = true // similar to the console output, contains issue signature to manually edit baseline files
+        sarif.enabled = true // standardized SARIF format (https://sarifweb.azurewebsites.net/) to support integrations with Github Code Scanning
+    }
+}
+
+tasks.withType(io.gitlab.arturbosch.detekt.Detekt).configureEach {
+    jvmTarget = "1.8"
+}
+
 ext {
     retrofit_version = '2.9.0'
     coroutines_version = '1.5.1'
@@ -118,6 +138,8 @@ dependencies {
     // ViewPager Indicator
     // FIXME:: Fetch on JitPack.io, version 1.0.3
     implementation 'com.github.romandanylyk:PageIndicatorView:b1bad589b5'
+
+    detektPlugins("io.gitlab.arturbosch.detekt:detekt-formatting:1.17.1")
 
     // for unit test
     testImplementation 'junit:junit:4.12'
