--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,6 +112,7 @@ ext {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(":core")
     implementation project(":anchor-bottom-sheet-behavior")
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
     // FIXME:: map 3.1.0 use volley 1.1.0 which is not available on mavenCentral and google
@@ -130,7 +131,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation "androidx.fragment:fragment-ktx:1.3.6"
-    implementation "com.google.android.gms:play-services-location:${gms_version}"
 
     // HTTP Client
     implementation "com.squareup.retrofit2:retrofit:${retrofit_version}"
