--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,6 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-parcelize'
 apply plugin: 'kotlin-kapt'
-apply plugin: 'kotlinx-serialization'
 apply plugin: 'dagger.hilt.android.plugin'
 apply from: "${rootDir}/gradle/build-script.gradle"
 
@@ -20,7 +19,6 @@ android {
         versionCode getVersionCodeTimeStamps()
         versionName app_version
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        buildConfigField 'String', 'HOST', APIHost
     }
 
     buildFeatures {
@@ -107,7 +105,6 @@ tasks.withType(io.gitlab.arturbosch.detekt.Detekt).configureEach {
 
 ext {
     retrofit_version = '2.9.0'
-    coroutines_version = '1.5.1'
 }
 
 dependencies {
@@ -122,10 +119,10 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.0'
     // ==== ==== ==== ==== ==== ==== ==== ==== ==== ==== ==== ====
 
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${coroutines_version}"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${coroutines_version}"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:${coroutines_version}"
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.2"
+    implementation platform("org.jetbrains.kotlinx:kotlinx-coroutines-bom:1.5.1")
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services"
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
@@ -134,8 +131,6 @@ dependencies {
 
     // HTTP Client
     implementation "com.squareup.retrofit2:retrofit:${retrofit_version}"
-    implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0"
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.5.0'
 
     // Dependency Injection
     implementation "com.google.dagger:hilt-android:$dagger_version"
