--- a/core/build.gradle
+++ b/core/build.gradle
@@ -15,6 +15,7 @@ android {
         targetSdk target_sdk_version
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+        buildConfigField 'String', 'HOST', APIHost
     }
 
     buildTypes {
@@ -37,15 +38,15 @@ android {
 
 ext {
     retrofit_version = '2.9.0'
-    coroutines_version = '1.5.1'
 }
 
 dependencies {
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
     // Kotlin
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${coroutines_version}"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${coroutines_version}"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:${coroutines_version}"
+    implementation platform("org.jetbrains.kotlinx:kotlinx-coroutines-bom:1.5.1")
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.2"
 
     // GMS
