refactor: upgrade target and compile SDK version to 31 (S)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
             android:name=".mainpage.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
+            android:exported="true"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
