--- a/app/build.gradle
+++ b/app/build.gradle
@@ -127,6 +127,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.core:core-ktx:1.6.0'
+    implementation "androidx.core:core-splashscreen:1.0.0-alpha01"
     implementation "androidx.fragment:fragment-ktx:1.3.6"
 
     // HTTP Client
