--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,7 +122,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services"
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.5.0-beta01'
+    implementation 'com.google.android.material:material:1.6.0-alpha01'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation "androidx.core:core-splashscreen:1.0.0-alpha02"
     implementation "androidx.fragment:fragment-ktx:1.3.6"
